--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                 <li>Автомобиль не должен быть желтый и не с желтыми номерами</li>
                 <li>Машина не старше 3 лет</li>
                 <li>Стаж вождения не менее 3 лет</li>
-                <li>Дивайс на системе андроид 4.0и выше(самсунг)/li>
+                <li>Дивайс на системе андроид 4.0и выше(самсунг) </li>
             </ul>
       </div></div>
             <div class="col-md-6">  
