--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           <div class="col-md-6">
               <div class="reasons_block">
                   <div class="reasons_round">
-                      <img src="icons/_schedule.png" alt="reason">
+                      <img src="icons/schedule.png" alt="reason">
                   </div>
                   <div class="reasons_descr">
                       <div class="reasons_subtitle">Работа в удобное время, никаких графиков</div>
